--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
+    "react-app-rewire-define-plugin": "^1.0.0",
+    "react-app-rewire-less": "^2.1.1",
     "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -32,6 +34,7 @@
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1"
+    "eslint-plugin-react": "^7.9.1",
+    "react-app-rewire-less": "^2.1.1"
   }
 }
