--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.4.1",
     "react-app-rewire-define-plugin": "^1.0.0",
     "react-app-rewire-less": "^2.1.1",
+    "react-app-rewire-less-modules": "^1.3.0",
     "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
